--- a/src/app/main-page/main-page.component.scss
+++ b/src/app/main-page/main-page.component.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     background-color: #FFFCF3;
-    height: 15%;
+    min-height: 100vh;
     gap: 200px;
     padding: 0px 100px;
     font-family: 'Overpass', sans-serif;
