--- a/src/app/my-skills/my-skills.component.scss
+++ b/src/app/my-skills/my-skills.component.scss
@@ -5,6 +5,12 @@
     font-family: 'Overpass', sans-serif;
 }
 
+.arrow-box {
+    overflow: hidden;
+    max-width: 100vw;
+    margin: 100px 0px;
+}
+
 #arrow-right {
     @media (max-width: 1650px) {
         position: absolute;
@@ -43,7 +49,6 @@
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    margin-bottom: 300px;
 
     span {
         font-size: 16px;
